crates/ty_python_semantic/resources/mdtest/snapshots/attribute_assignment…_-_Attribute_assignment_-_Setting_attributes_o…_(467e26496f4c0c13).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: attribute_assignment.md - Attribute assignment - Setting attributes on union types
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(flag: bool) -> None:
 2 |     if flag:
 3 |         class C1:
 4 |             attr: int = 0
 5 | 
 6 |     else:
 7 |         class C1:
 8 |             attr: str = ""
 9 | 
10 |     # TODO: The error message here could be improved to explain why the assignment fails.
11 |     C1.attr = 1  # error: [invalid-assignment]
12 | 
13 |     # error: [conflicting-declarations] "Conflicting declared types for attribute `attr`: `int` and `str`"
14 |     class C2:
15 |         if flag:
16 |             attr: int = 0
17 |         else:
18 |             attr: str = ""
19 | 
20 |     # TODO: This should be an error
21 |     C2.attr = 1
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal[1]` is not assignable to attribute `attr` on type `<class 'C1'> | <class 'C1'>`
  --> src/mdtest_snippet.py:11:5
   |
10 |     # TODO: The error message here could be improved to explain why the assignment fails.
11 |     C1.attr = 1  # error: [invalid-assignment]
   |     ^^^^^^^
12 |
13 |     # error: [conflicting-declarations] "Conflicting declared types for attribute `attr`: `int` and `str`"
   |
info: rule `invalid-assignment` is enabled by default

```

```
error[conflicting-declarations]: Conflicting declared types for attribute `attr`: `int` and `str`
  --> src/mdtest_snippet.py:14:5
   |
13 |       # error: [conflicting-declarations] "Conflicting declared types for attribute `attr`: `int` and `str`"
14 | /     class C2:
15 | |         if flag:
16 | |             attr: int = 0
17 | |         else:
18 | |             attr: str = ""
   | |__________________________^
19 |
20 |       # TODO: This should be an error
   |
info: rule `conflicting-declarations` is enabled by default

```
